# drchubo

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  setup.sh
DRC_RosPkgs/DRC/: CMakeLists.txt  README.md  manifest.xml
DRC_RosPkgs/DRC/include/: DRC_paths.h  DRC_paths.h.cmake
DRC_RosPkgs/DRC/launch/: drchubo.launch  drchubo_no_controllers.launch  drchubo_rubble.launch
DRC_RosPkgs/DRC/plugins/DRCPlugin/: CMakeLists.txt  DRCPlugin.cpp  DRCPlugin.h
DRC_RosPkgs/DRC/src/walkPublisher/: CMakeLists.txt  main.cpp  zmpnode.cpp  zmpnode.h
DRC_RosPkgs/DRC/worlds/: drchubo.world  drchubo_rubble.world
apps/: CMakeLists.txt
apps/andrew/: ros_cv.cpp
apps/animateArms/: CMakeLists.txt  main.cpp
apps/atlas/: AtlasRenderer.h  CMakeLists.txt  MyWindow.cpp  MyWindow.h
apps/atlas_zmp/: main.cpp
apps/car_test/: CMakeLists.txt  car_test.cpp
apps/climber/: CMakeLists.txt  Climber.cpp  Climber.h  Ingress.cpp  Ingress.h  Ingress_demo.cpp  demo.cpp  trajTester.cpp  trajTester.h  trajTesterDemo.cpp
apps/drcsim_joint_commands_tutorial/: CMakeLists.txt  manifest.xml
apps/drcsim_joint_commands_tutorial/src/: absolute.cpp  atlasKin.cpp  atlasKin.h  joystick.cpp  joystickJacobian.cpp  joystickJacobian_ver2.cpp  publish_joint_commands.cpp
apps/driver/: CMakeLists.txt  manifest.xml
apps/driver/rosQtInterface/: CMakeLists.txt
apps/driver/rosQtInterface/common/: CMakeLists.txt  (+1 more)
apps/driver/src/: CMakeLists.txt
apps/fastrak_teleop/: CMakeLists.txt  MyWindow.h  Teleop.cpp  mainpage.dox  manifest.xml  spnav_all.cpp  teleop-test.cpp
apps/grasp/: CMakeLists.txt  grasp.cpp
apps/hubo-teleop/: CMakeLists.txt  Fastrak.cpp  hubo_captain.cpp  hubo_fastrak.cpp  hubo_fastrak.h  spnav.cpp  teleop.h  teleop_demo.cpp  teleop_demo.h
apps/ik_demo/: MyWindow.cpp  main.cpp
apps/moveArms/: CMakeLists.txt  main.cpp
apps/new-fastrak/: CMakeLists.txt  Fastrak.cpp  main.cpp
apps/pelvis_tilt_demo/: CMakeLists.txt  MyWindow.cpp  MyWindow.h  main.cpp
apps/perception/: CMakeLists.txt  grabImage.cpp  grabPointCloud2.cpp
apps/quadruped/: CMakeLists.txt  manifest.xml  quadruped_enter.cpp
apps/robot_viz/: CMakeLists.txt  MyWindow.cpp  main.cpp
apps/ros_ik/: CMakeLists.txt  publish_joint_commands.cpp
apps/spnav_all/: CMakeLists.txt  MyWindow.cpp  spnav_all.cpp  spnav_all.h
apps/spnav_com/: CMakeLists.txt  spnav_com.cpp
apps/spnav_gl/: CMakeLists.txt  MyWindow.cpp  MyWindow.h  spnav_gl.cpp
apps/spnav_teleop/: CMakeLists.txt  spnav_teleop.cpp  spnav_teleop.h
apps/teleop/: CMakeLists.txt  spnav.cpp  spnav.h  teleop_demo.cpp  teleop_demo.h  test_spnav.cpp
apps/zmp_driver/: CMakeLists.txt  main.cpp
apps/zmp_steps/: CMakeLists.txt  comIK.cpp  comikTest.cpp  zmp_steps.cpp
apps/zmp_steps/adaptedZMP/: AtlasKinematics_Extra.cpp  AtlasKinematics_Extra.h  CMakeLists.txt  ZmpPreview.h  atlas_zmp.h  footprint.cpp  footprint.h  gait-timer.cpp  gait-timer.h  zmpWalkGenerator.cpp  zmpWalkGenerator.h
apps/zmpnode/: CMakeLists.txt  main.cpp  main_TestArbitraryStart.cpp  walkNode.cpp  zmpWalk_smoothTransition.cpp  zmpnode.cpp  zmpnode.h
apps/zmpnode/matt_stuff/: huboplus  mzsettings.cmake
dart-atlas/: .gitignore  CMakeLists.txt  README
dart-atlas/apps/: CMakeLists.txt
dart-atlas/apps/atlas/: AtlasRenderer.cpp  MyWindow.cpp  main.cpp
dart-atlas/apps/atlas_zmp/: CMakeLists.txt  MyWindow.cpp  main.cpp
dart-atlas/apps/ik_demo/: CMakeLists.txt  MyWindow.cpp  MyWindow.h  main.cpp
dart-atlas/apps/robot_viz/: CMakeLists.txt  MyWindow.cpp
dart-atlas/apps/ros_ik/: CMakeLists.txt  manifest.xml
dart-atlas/apps/zmp_driver/: main.cpp
dart-atlas/data/skel/: ground1.skel
dart-atlas/matlab/: AtlasLegKinematics.m  AtlasLegTransforms.m
dart-atlas/matlab/HuboIK/: HuboArmIK.m  HuboArmIK4Joints.m  HuboArmIKEqns4Joints.m  HuboDrillFKandIKTest.m  HuboDrillIK.m  HuboHeadIKEqns.m  HuboLegFK.m  HuboRightLegFK.m
dart-atlas/script/: AtlasKinematics.m  AtlasLegIK.m  AtlasLegKinematics.m  AtlasLegSymbolicKinematics.m  AtlasSymbolicKinematics.m  DH2Transform.m
dart-atlas/script/HuboIK/: HuboArmFKandIK4JointsTest.m  HuboArmFKandIKTest.m  HuboRightLegIKEqnsURDF.m
dart-atlas/src/: CMakeLists.txt
dart-atlas/src/atlas/: AtlasGraphics.cpp  AtlasGraphics.h  AtlasKinematics.cpp  AtlasKinematics.h  AtlasUtils.cpp  AtlasUtils.h  atlas-header.h  atlas.cpp  atlas_kinematics.cpp
dart-atlas/src/robot/: robot_graphics.cpp  robot_graphics.h  robot_kinematics.cpp  robot_kinematics.h
dart-atlas/src/utils/: AtlasPaths.h  Paths.h.in  data_paths.h.in
dart-atlas/src/zmp/: Zmp.h  ZmpCommand.cpp  ZmpCommand.h  ZmpDriver.cpp  ZmpDriver.h  ZmpGUI.cpp  ZmpGUI.h  ZmpGains.h
dart-atlas/test/: CMakeLists.txt  FiveSteps.cpp  down.cpp  fivesteps.cpp  testAtlasKinematics.cpp  utils.cpp  utils_test.cpp  yannew.cpp  yantest.cpp
dartDemo/: CMakeLists.txt  Controller.cpp  Controller.h  drchubo_demo.cpp  drchubo_demo.h  drchubo_demoApp.cpp
plugins/: CMakeLists.txt  drchubo_Basics.cpp  drchubo_Basics.h  pose_animation.cpp
plugins/DRCPlugin/: CMakeLists.txt  DRCPlugin.cpp  DRCPlugin.h
plugins/controls/: controlBundle.cpp
plugins/drchuboPlugin/: drchuboPlugin.cpp  drchuboPlugin.h
plugins/drchubo_Animation/: drchubo_Animation.cpp
plugins/drchubo_AnimationPush/: drchubo_AnimationPush.cpp
plugins/drchubo_Basics/: drchubo_Basics.cpp
plugins/drchubo_Basics/controls/: controlBundle.h  pid_controller.cpp  pid_controller.h
plugins/drchubo_MattCode/: CMakeLists.txt  drchubo_MattCode.cpp  drchubo_MattCode.h  myhubo.kinbody.xml
plugins/drchubo_MattCode/src/: CMakeLists.txt
plugins/drchubo_MattCode/zmp/: CMakeLists.txt  draw-footprints.h  footprint.cpp
plugins/drchubo_Walk1/: drchubo_Walk1.cpp  drchubo_Walk1.h
plugins/pure_gazebo_plugins/drchubo_Animation/: drchubo_Animation.cpp
plugins/pure_gazebo_plugins/drchubo_AnimationPush/: drchubo_AnimationPush.cpp
plugins/pure_gazebo_plugins/drchubo_Walk1/: drchubo_Walk1.cpp
tools/URDF_to_SDF_converter/: CMakeLists.txt  README.txt  convertURDF.cpp
tools/URDF_to_SDF_converter/urdfs/: drchubo_drill.urdf  drchubo_fingersFixed_closed.urdf
(+453 files in other folders)
